--- a/Full Stack app/Backend/package.json
+++ b/Full Stack app/Backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node db.js"
+    "server": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
